--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
-    "sass": "^1.48.0",
+    "sass": "^1.49.9",
     "tus-js-client": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -57,6 +57,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.0.8"
   }
 }
